# zetascale-testsuite

./: README  README.md  get_cases.pl  run.pl
conf/: gdb.ini  test.properties  zs.prop  zs_ins.prop
conf/.svn/: all-wcprops  entries
engine/: CMakeLists.txt  Makefile  Makefile.debug  thread.c  zs_test_engine.c  zs_test_engine.h
engine/.svn/: all-wcprops  entries
engine/.svn/text-base/: thread.c.svn-base  zs_test_engine.c.svn-base  zs_test_engine.h.svn-base
t/.svn/: all-wcprops  entries
t/Basic/: A02_open_50_same_mode_containers_test.t  A03_obj_size_large_than_cntr_test.t  A04_open_created_cntr_test.t  A05_open_close_cntr_for_50_times_test.t  A06_write_read_object_test.t  A07_get_container_props_after_open_cntr_test.t  A100_threads_write_del_update_recovery_increasing_key.t  A101_threads_write_del_update_recovery_increasing_keylen.t  A102_threads_write_del_update_recovery_decreasing_key.t  A103_threads_write_del_update_recovery_decreasing_keylen.t  A10_delete_closed_cntr_test.t  A11_delete_unclosed_cntr_test.t  A125_keylen_boundary_test.t  A126_basic_negative_test.t  A127_opencntr_negative_test.t  A129_partial_write_1cntr_multi_threads_write_recovery.t  A12_delete_unexists_cntr_test.t  A130_partial_write_5cntr_multi_threads_write_recovery.t  A131_partial_write_5cntr_multi_threads_write_switch_compression_recovry.t  A132_partial_write_5cntr_multi_threads_mput_recovery.t  A133_partial_write_5cntr_multi_threads_mput_switch_compression_recovery.t  A13_get_container_props_after_delete_closed_cntr_test.t  A14_read_object_after_delete_closed_cntr_test.t  (+52 more)
(+1314 files in other folders)
